Adjusted for ClubAdmin and added query file for role checking

--- a/MVCClubsWeek4/Views/Shared/_LoginPartial.cshtml
+++ b/MVCClubsWeek4/Views/Shared/_LoginPartial.cshtml
@@ -6,7 +6,7 @@
     @Html.AntiForgeryToken()
 
 <ul class="nav navbar-nav navbar-right">
-    @if (User.IsInRole("Admin"))
+    @if (User.IsInRole("ClubAdmin"))
     {
         <li>@Html.ActionLink("Clubs", "Index", "Clubs")</li>
     }
