--- a/MVCClubsWeek4/Views/Account/Register.cshtml
+++ b/MVCClubsWeek4/Views/Account/Register.cshtml
@@ -1,6 +1,8 @@
 ﻿@model MVCClubsWeek4.Models.RegisterViewModel
 @{
-    ViewBag.Title = "Register";
+                /**/
+
+                ViewBag.Title = "Register";
 }
 
 <h2>@ViewBag.Title.</h2>
@@ -29,6 +31,20 @@
             @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control" })
         </div>
     </div>
+    <div class="form-group">
+            @Html.LabelFor(m => m.ClubEntityID, new { @class = "col-md-2 control-label" })
+            <div class="col-md-10">
+                @Html.TextBoxFor(m => m.ClubEntityID, new { @class = "form-control" })
+            </div>
+            <div class="text-danger">
+                @if (ViewBag.Errors != null)
+                    {
+                        @Html.Label((string)@ViewBag.Errors)
+                    }
+            </div>
+    </div>
+
+
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
             <input type="submit" class="btn btn-default" value="Register" />
