Week 5 Lab Part 18 Completed

--- a/MVCClubsWeek4/Views/Shared/_LoginPartial.cshtml
+++ b/MVCClubsWeek4/Views/Shared/_LoginPartial.cshtml
@@ -21,7 +21,7 @@
     @Html.AntiForgeryToken()
 
 <ul class="nav navbar-nav navbar-right">
-    @if (User.IsInRole("ClubAdmin") || User.IsInRole("Admin"))
+    @if (User.IsInRole("Admin"))
     {
         <li>@Html.ActionLink("Clubs", "Index", "Clubs")</li>
     }
